kubernetes-part-a/keycloak-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: ./kompose convert -o kuber2
#     kompose.version: 1.31.2 (a92241f79)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: ./kompose convert -o kuber2
#         kompose.version: 1.31.2 (a92241f79)
#       creationTimestamp: null
#       labels:
#         io.kompose.network/services-db-network: "true"
#         io.kompose.network/services-frontend-network: "true"
#         io.kompose.service: keycloak
#     spec:
#       containers:
#         - env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_PASSWORD
#               value: password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_HOSTNAME
#               value: localhost
#             # - name: KC_HOSTNAME
#             #   value: keycloak.svc.cluster.local
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD_FILE
#               value: /run/secrets/kc-admin-password
#           image: olhaya/keycloak:multiarch
#           livenessProbe:
#             exec:
#               command:
#                 - nc
#                 - -z
#                 - localhost
#                 - "8080"
#             failureThreshold: 5
#             initialDelaySeconds: 30
#             periodSeconds: 10
#             timeoutSeconds: 5
#           name: keycloak
#           ports:
#             - containerPort: 8080
#               hostPort: 8080
#               protocol: TCP
#           resources: {}
#           volumeMounts:
#             - mountPath: /run/secrets/pg-password
#               name: pg-password
#             - mountPath: /run/secrets/kc-admin-password
#               name: kc-admin-password
#       restartPolicy: Always
#       volumes:
#         - name: pg-password
#           secret:
#             items:
#               - key: pg-password
#                 path: pg-password
#             secretName: pg-password
#         - name: kc-admin-password
#           secret:
#             items:
#               - key: kc-admin-password
#                 path: kc-admin-password
#             secretName: kc-admin-password
# status: {}



# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: ./kompose convert -o ../kub
#     kompose.version: 1.31.2 (a92241f79)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: ./kompose convert -o ../kub
#         kompose.version: 1.31.2 (a92241f79)
#       creationTimestamp: null
#       labels:
#         io.kompose.network/services-db-network: "true"
#         io.kompose.network/services-frontend-network: "true"
#         io.kompose.service: keycloak
#     spec:
#       containers:
#         - env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_PASSWORD
#               value: password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_HOSTNAME
#               value: localhost
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD_FILE
#               value: /run/secrets/kc-admin-password
#             - name: KC_HEALTH_ENABLED
#               value: "true"
#             - name: KC_METRICS_ENABLED
#               value: "true"
#           image: olhaya/keycloak:multiarch
#           livenessProbe:
#             exec:
#               command:
#                 - nc
#                 - -z
#                 - localhost
#                 - "8080"
#             failureThreshold: 5
#             # initialDelaySeconds: 30
#             initialDelaySeconds: 300

#             periodSeconds: 10
#             timeoutSeconds: 5
#           name: keycloak
#           ports:
#             - containerPort: 8080
#               hostPort: 8080
#               protocol: TCP
#           resources: {}
#           volumeMounts:
#             - mountPath: /run/secrets/pg-password
#               name: pg-password
#             - mountPath: /run/secrets/kc-admin-password
#               name: kc-admin-password
#       restartPolicy: Always
#       volumes:
#         - name: pg-password
#           secret:
#             items:
#               - key: pg-password
#                 path: pg-password
#             secretName: pg-password
#         - name: kc-admin-password
#           secret:
#             items:
#               - key: kc-admin-password
#                 path: kc-admin-password
#             secretName: kc-admin-password
# status: {}






# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   strategy:
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 0
#   template:
#     metadata:
#       labels:
#         io.kompose.service: keycloak
#     spec:
#       containers:
#       - name: keycloak
#         image: olhaya/keycloak:multiarch
#         ports:
#         - containerPort: 8080
#         env:
#         - name: KC_DB
#           value: postgres
#         - name: KC_DB_PASSWORD
#           value: password
#         - name: KC_DB_URL
#           value: jdbc:postgresql://postgres:5432/tasks
#         - name: KC_DB_USERNAME
#           value: admin
#         # - name: KC_HOSTNAME
#         #   value: localhost
#         - name: KC_HOSTNAME
#           value: keycloak.127.0.0.1.nip.io
#         - name: KC_HTTP_ENABLED
#           value: "true"
#         - name: KEYCLOAK_ADMIN
#           value: admin
#         - name: KEYCLOAK_ADMIN_PASSWORD_FILE
#           value: /run/secrets/kc-admin-password
#         # Add these critical health settings
#         - name: KC_HEALTH_ENABLED
#           value: "true"
#         - name: KC_METRICS_ENABLED
#           value: "true"
#         - name: KC_LOG_LEVEL
#           value: INFO
#         # Probes configuration
#         livenessProbe:
#           httpGet:
#             path: /health/live
#             port: 8080
#           initialDelaySeconds: 300
#           periodSeconds: 10
#           timeoutSeconds: 5
#           failureThreshold: 3
#         readinessProbe:
#           httpGet:
#             path: /health/ready
#             port: 8080
#           initialDelaySeconds: 30
#           periodSeconds: 10
#           timeoutSeconds: 5
#         resources:
#           limits:
#             memory: "1Gi"
#             cpu: "1"
#           requests:
#             memory: "512Mi"
#             cpu: "500m"
#         volumeMounts:
#         - mountPath: /run/secrets/pg-password
#           name: pg-password
#         - mountPath: /run/secrets/kc-admin-password
#           name: kc-admin-password
#       volumes:
#       - name: pg-password
#         secret:
#           secretName: pg-password
#       - name: kc-admin-password
#         secret:
#           secretName: kc-admin-password











# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: keycloak
#   strategy:
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 0
#   template:
#     metadata:
#       labels:
#         app: keycloak
#     spec:
#       containers:
#         - name: keycloak
#           # image: olhaya/keycloak:multiarch
#           image: quay.io/keycloak/keycloak:24.0.3

#           args:
#             - start
#             - --health-enabled=true
#             - --metrics-enabled=true
#             - --spi-changelog-checks-enabled=false

#           ports:
#             - containerPort: 8080
#           env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_DB_PASSWORD
#               value: password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_HOSTNAME
#               value: keycloak.127.0.0.1.nip.io
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD_FILE
#               value: /run/secrets/kc-admin-password/password
#             - name: KC_HEALTH_ENABLED
#               value: "true"
#             - name: KC_METRICS_ENABLED
#               value: "true"
#             - name: KC_LOG_LEVEL
#               value: INFO
#           livenessProbe:
#             httpGet:
#               path: /health/live
#               port: 8080
#             initialDelaySeconds: 300
#             periodSeconds: 10
#             timeoutSeconds: 5
#             failureThreshold: 3
#           readinessProbe:
#             httpGet:
#               path: /health/ready
#               port: 8080
#             initialDelaySeconds: 30
#             periodSeconds: 10
#             timeoutSeconds: 5
#           resources:
#             limits:
#               memory: "1Gi"
#               cpu: "1"
#             requests:
#               memory: "512Mi"
#               cpu: "500m"
#           volumeMounts:
#             - mountPath: /run/secrets/kc-admin-password
#               name: kc-admin-password
#       volumes:
#         - name: kc-admin-password
#           secret:
#             secretName: kc-admin-password




#dziala ale bez sekretow

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: KC_DB
              value: postgres
            - name: KC_DB_PASSWORD
              value: password
            - name: KC_ADMIN_PASSWORD_FILE
              value: /run/secrets/kc-admin-password/password
            - name: KC_DB_URL
              value: jdbc:postgresql://postgres:5432/tasks
            - name: KC_DB_USERNAME
              value: admin
            - name: KC_HOSTNAME
              value: localhost
            - name: KC_HTTP_ENABLED
              value: "true"
            - name: KEYCLOAK_ADMIN
              value: admin
            # - name: KEYCLOAK_ADMIN_PASSWORD
            #   value: admin
            - name: KEYCLOAK_ADMIN_PASSWORD_FILE
              value: /run/secrets/kc-admin-password/password
          image: olhaya/keycloak:multiarch
          name: keycloak
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      restartPolicy: Always




##aaa

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -f docker-compose.yaml
#     kompose.version: 1.34.0 (HEAD)
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: kompose convert -f docker-compose.yaml
#         kompose.version: 1.34.0 (HEAD)
#       labels:
#         io.kompose.service: keycloak
#     spec:
#       containers:
#         - env:
#             - name: KC_DB
#               value: postgres
#             # - name: KC_DB_PASSWORD
#             #   value: password
#             - name: KC_DB_PASSWORD_FILE
#               value: /run/secrets/pg-password/password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_HOSTNAME
#               value: localhost
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             # - name: KEYCLOAK_ADMIN_PASSWORD
#             #   value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD_FILE
#               value: /run/secrets/kc-admin-password/password
#           image: olhaya/keycloak:multiarch
#           name: keycloak
#           ports:
#             - containerPort: 8080
#               protocol: TCP
#           resources:
#             requests:
#               memory: "512Mi"
#               cpu: "200m"
#             limits:
#               memory: "2Gi"
#               cpu: "500m"
#       restartPolicy: Always



#dziala niedosteny w przegladarce
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: keycloak
#   template:
#     metadata:
#       labels:
#         app: keycloak
#     spec:
#       containers:
#         - name: keycloak
#           image: olhaya/keycloak:multiarch
#           # ports:
#           #   - containerPort: 8080
#           ports:
#             - containerPort: 8080
#               protocol: TCP
#           resources:
#             requests:
#               memory: "512Mi"
#               cpu: "200m"
#             limits:
#               memory: "2Gi"
#               cpu: "500m"
#           env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: pg-password
#                   key: pg-password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_HOSTNAME
#               value: localhost
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: kc-admin-password
#                   key: kc-admin-password
#           volumeMounts:
#             - name: pg-password
#               mountPath: /run/secrets/pg-password
#               readOnly: true
#             - name: kc-admin-password-volume
#               mountPath: /run/secrets/kc-admin-password
#               readOnly: true
#       volumes:
#         - name: pg-password
#           secret:
#             items:
#               - key: pg-password
#                 path: pg-password  # Tak jak w Postgresie
#             secretName: pg-password
#         - name: kc-admin-password-volume
#           secret:
#             secretName: kc-admin-password




# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -f docker-compose.yaml
#     kompose.version: 1.34.0 (HEAD)
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: kompose convert -f docker-compose.yaml
#         kompose.version: 1.34.0 (HEAD)
#       labels:
#         io.kompose.service: keycloak
#     spec:
#       containers:
#         - env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: pg-password
#                   key: pg-password
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_HOSTNAME
#               value: localhost
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KEYCLOAK_ADMIN
#               value: admin
#             - name: KEYCLOAK_ADMIN_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: kc-admin-password
#                   key: kc-admin-password
#           image: olhaya/keycloak:multiarch
#           name: keycloak
#           ports:
#             - containerPort: 8080
#               protocol: TCP
#           resources:
#             requests:
#               memory: "512Mi"
#               cpu: "200m"
#             limits:
#               memory: "2Gi"
#               cpu: "500m"
#           volumeMounts:
#             - name: pg-password
#               mountPath: /run/secrets/pg-password
#               readOnly: true
#             - name: kc-admin-password-volume
#               mountPath: /run/secrets/kc-admin-password
#               readOnly: true
#       volumes:
#         - name: pg-password
#           secret:
#             secretName: pg-password
#             items:
#               - key: pg-password
#                 path: pg-password
#         - name: kc-admin-password-volume
#           secret:
#             secretName: kc-admin-password




# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: keycloak
#   labels:
#     io.kompose.service: keycloak
#   annotations:
#     kompose.cmd: ./kompose convert -o kuber2
#     kompose.version: 1.31.2 (a92241f79)
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: keycloak
#   template:
#     metadata:
#       labels:
#         io.kompose.service: keycloak
#         io.kompose.network/services-db-network: "true"
#     spec:
#       containers:
#         - name: keycloak
#           image: olhaya/keycloak:multiarch
#           ports:
#             - containerPort: 8080
#           env:
#             - name: KC_DB
#               value: postgres
#             - name: KC_DB_USERNAME
#               value: admin
#             - name: KC_DB_URL
#               value: jdbc:postgresql://postgres:5432/tasks
#             - name: KC_HTTP_ENABLED
#               value: "true"
#             - name: KC_HOSTNAME
#               value: localhost
#             - name: KEYCLOAK_ADMIN
#               value: admin
            # - name: KEYCLOAK_ADMIN_PASSWORD_FILE
            #   value: /run/secrets/kc-admin-password/password
            # - name: KC_DB_PASSWORD_FILE
            #   value: /run/secrets/pg-password/password
#             - name: KEYCLOAK_ADMIN_PASSWORD
#               value: admin
#           volumeMounts:
#             - mountPath: /run/secrets/pg-password
#               name: pg-password
#             - mountPath: /run/secrets/kc-admin-password
#               name: kc-admin-password
#       restartPolicy: Always
#       volumes:
#         - name: pg-password
#           secret:
#             secretName: pg-password
#             items:
#               - key: pg-password
#                 path: password
#         - name: kc-admin-password
#           secret:
#             secretName: kc-admin-password
#             items:
#               - key: kc-admin-password
#                 path: password
