kubernetes-part-a/keycloak-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     kompose.cmd: ./kompose convert -o kuber2
#     kompose.version: 1.31.2 (a92241f79)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   ports:
#     - name: "8080"
#       port: 8080
#       targetPort: 8080
#   selector:
#     io.kompose.service: keycloak
# status:
#   loadBalancer: {}



# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     kompose.cmd: ./kompose convert -o ../kub
#     kompose.version: 1.31.2 (a92241f79)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: keycloak
#   name: keycloak
# spec:
#   ports:
#     - name: "8080"
#       port: 8080
#       targetPort: 8080
#   selector:
#     io.kompose.service: keycloak
# status:
#   loadBalancer: {}



# apiVersion: v1
# kind: Service
# metadata:
#   name: keycloak
#   labels:
#     app: keycloak
# spec:
#   ports:
#     - name: http
#       port: 8080
#       targetPort: 8080
#   selector:
#     app: keycloak
#   type: ClusterIP




apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
