kubernetes-part-a/frontend-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#     - host: frontend.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
#           # - path: /keycloak
#           #   pathType: Prefix
#           #   backend:
#           #     service:
#           #       name: keycloak
#           #       port:
#           #         number: 8080



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /api          # Nowa ścieżka dla backendu
        pathType: Prefix
        backend:
          service:
            name: backend   # Nazwa Service backendu (sprawdź `kubectl get svc`)
            port:
              number: 3001  # Port backendu (np. Node.js/Spring)
      # - path: /keycloak  # Dodałem regułę dla Keycloak
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: keycloak
      #       port:
      #         number: 8080
